# bzlmod-extension-immutable-error

./: .gitattributes  BUILD.bazel  MODULE.bazel  README.md  extensions.bzl
test/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE
